--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,18 @@
 .swiper {
   width: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3563e9;
+  border-radius: 10px;
+}
